--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Tenali+Ramakrishna&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css');
 :root{
-    --title-font: "Cormorant Garamond";
-    --main-font: "Poppins";
+    --title-font: "Tenali Ramakrishna";
+    --main-font: "Nunito";
     --container-size: 1200px;
     --white: #d7d7d7;
-    --dark: #182615;
+    --dark: #161616;
     --black: #1e1e1e;
     --main-color: #cca967;
     --light: #f0b547;
     --body-size: 16px;
     --title-size: 4rem;
-    --radius: 0px;
+    --radius: 50px;
     --border-radius: 10px;
 }
 *{padding: 0%;margin: 0%;box-sizing: border-box;scroll-behavior: smooth;}
@@ -23,7 +24,7 @@
     gap: 15px;
 }
 body{color: var(--white);font-family: var(--main-font);background: url(../images/background.svg);background-size: 100%;position: relative;min-height: 100vh;min-width: 100%;letter-spacing: 1.2px;line-height: 2;font-weight: 200;}
-body::before{content: "";position: absolute;inset: 0;background: linear-gradient(180deg, #00000059, #203f19ad, #0e100d8c, #162f107a, #0c1a0996, #2145197d, #061c0185);z-index: -1;backdrop-filter: blur(200px);}
+body::before{content: "";position: absolute;inset: 0;background: linear-gradient(180deg, #000000f7, #1a1a1adb, #000000c2, #212121cc, #000000d1, #060605d1, #2b2f2a85);z-index: -1;backdrop-filter: blur(200px);}
 h1,h2,h3,h4,h5,h6{font-family: var(--title-font);font-weight: 100;font-style: normal;}
 a{text-decoration: none;color: var(--light);transition: all .3s linear;}
 .btn{
@@ -173,12 +174,63 @@ header ul li a:hover,header ul li a.active{color: var(--light);}
 
 main section{position: relative;padding: 4% 10%;z-index: 1;}
 
+section.cases:before {
+    content: "procés";
+    font-size: 8em;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+    -webkit-text-stroke-color: #e7e7e71c;
+    -webkit-text-stroke-width: 1px;
+    transform: translate(-50%);
+    text-transform: uppercase;
+}
+
+section.accordion:before {
+    content: "FAQ";
+    font-size: 10em;
+    position: absolute;
+    top: 0%;
+    right: 12%;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+    -webkit-text-stroke-color: #e7e7e71c;
+    -webkit-text-stroke-width: 1px;
+}
+
 section.services {
     display: flex;
     flex-direction: column;
     gap: 50px;
 }
+
+section.services:before {
+    content: "Domaines";
+    font-size: 10em;
+    position: absolute;
+    top: -5%;
+    left: 10%;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+    -webkit-text-stroke-color: #e7e7e71c;
+    -webkit-text-stroke-width: 1px;
+}
 main section.about{grid-template-columns: 1fr 1fr;grid-gap: 8%;align-items: center;}
+
+section.about.grid:before {
+    content: "Présentation";
+    font-size: 7em;
+    position: absolute;
+    top: 5%;
+    right: 4%;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+    -webkit-text-stroke-color: #e7e7e71c;
+    -webkit-text-stroke-width: 1px;
+    text-transform: uppercase;
+}
 main section .title{font-size: 18px;font-family: var(--main-font);color: var(--white);line-height: 0;font-weight: 200;font-style: normal;letter-spacing: 1.5px;padding-bottom: 20px;}
 main section .subtitle{display: block;font-family: var(--title-font);font-size: var(--title-size);color: var(--light);font-weight: 900;line-height: 1.7;padding-bottom: 5px;font-style: normal;letter-spacing: 0px;}
 main section .subtitle.center,.center{text-align: center;}
@@ -240,7 +292,7 @@ main section.services .services-list {overflow: hidden;position: relative;}
 main section.services .btn-nav {
     position: absolute;
     top: 14%;
-    right: 14%;
+    right: 11%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -266,7 +318,8 @@ main section.services .service-card span.num{
     justify-content: center;
     left: 40px;
     font-family: var(--title-font);
-    font-weight: 900;
+    font-weight: 100;
+    font-size: 22px;
 }
 
 main section.services .service-card h3 {
@@ -349,6 +402,20 @@ main section.stats .item-count span:hover {
 }
 
 main section.atout{display: flex;flex-direction: column;align-items: center;gap: 50px;}
+
+main section.atout:before {
+    content: "atouts";
+    font-size: 10em;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+    -webkit-text-stroke-color: #e7e7e71c;
+    -webkit-text-stroke-width: 1px;
+    text-transform: uppercase;
+    transform: translate(-50%);
+}
 main section.atout .container{
     display: flex;
     justify-content: space-evenly;
@@ -362,7 +429,7 @@ main section.atout .container{
     border-color: #cca96747;
     box-shadow: 20px 20px 100px #0000004a;
 }
-.default-card span{width: 70px;height: 70px;border-radius: 50%;transition: all .3s linear;display: flex;justify-content: center;align-items: center;/* background: var(--main-color); */font-size: 30px;color: var(--light);}
+.default-card span{width: 70px;height: 70px;border-radius: 50%;transition: all .3s linear;display: flex;justify-content: center;align-items: center;/* background: var(--main-color); */color: var(--light);}
 .default-card span img{
     width: 100%;
     height: 100%;
@@ -370,7 +437,213 @@ main section.atout .container{
     opacity: .4;
     filter: grayscale(1) invert(1);
 }
+section#testimony{
+    font-family: var(--main-font), sans-serif;
+    display: flex;
+    padding-bottom: 12em;
+    line-height: 1.2;
+  }
+  .blog-slider {
+    width: 95%;
+    position: relative;
+    max-width: 1000px;
+    margin: auto;
+    background: var(--light);
+    backdrop-filter: blur(5px);
+    padding: 25px;
+    border-radius: 25px;
+    height: 400px;
+    transition: all 0.3s;
+  }
+  
+  .blog-slider:before {
+      content: "Témoignages";
+      font-size: 8em;
+      position: absolute;
+      bottom: -60%;
+      right: -20%;
+      -webkit-text-fill-color: transparent;
+      font-weight: 900;
+      -webkit-text-stroke-color: #e7e7e71c;
+      -webkit-text-stroke-width: 1px;
+      text-transform: uppercase;
+  }
 
+  .blog-slider__item {
+    display: flex;
+    align-items: center;
+    padding-left: 40px;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__img img {
+    opacity: 1;
+    transition-delay: 0.3s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > * {
+    opacity: 1;
+    transform: none;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(1) {
+    transition-delay: 0.3s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(2) {
+    transition-delay: 0.4s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(3) {
+    transition-delay: 0.5s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(4) {
+    transition-delay: 0.6s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(5) {
+    transition-delay: 0.7s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(6) {
+    transition-delay: 0.8s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(7) {
+    transition-delay: 0.9s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(8) {
+    transition-delay: 1s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(9) {
+    transition-delay: 1.1s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(10) {
+    transition-delay: 1.2s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(11) {
+    transition-delay: 1.3s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(12) {
+    transition-delay: 1.4s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(13) {
+    transition-delay: 1.5s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(14) {
+    transition-delay: 1.6s;
+  }
+  .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(15) {
+    transition-delay: 1.7s;
+  }
+  .blog-slider__img {
+    width: 350px;
+    flex-shrink: 0;
+    height: 500px;
+    background: var(--dark);
+    /* box-shadow: 4px 4px 40px rgb(0 0 0 / 45%); */
+    border-radius: 20px;
+    transform: translateX(-70px);
+    overflow: hidden;
+  }
+  .blog-slider__img:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-image: linear-gradient(45deg, #000000, transparent); */
+    border-radius: 20px;
+    opacity: 0.8;
+  }
+  .blog-slider__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    opacity: 0;
+    border-radius: 20px;
+    transition: all 0.3s;
+  }
+  .blog-slider__content {
+    padding-right: 25px;
+  }
+  .blog-slider__content > * {
+    opacity: 0;
+    transform: translateY(25px);
+    transition: all 0.4s;
+  }
+  .blog-slider__code {
+    color: var(--black);
+    margin-bottom: 15px;
+    display: block;
+    font-weight: 500;
+  }
+  .blog-slider__title {
+    font-size: 24px;
+    font-weight: 700;
+    color: #0d0925;
+    margin-bottom: 20px;
+  }
+  .blog-slider__text {
+    color: var(--dark);
+    margin-bottom: 30px;
+    line-height: 1.5em;
+    padding-top: 50px;
+    padding-left: 20px;
+    position: relative;
+    letter-spacing: .5px;
+    font-weight: 500;
+  }
+  
+  .blog-slider__text span {
+      font-size: 6em;
+      position: absolute;
+      top: 40px;
+      color: #847777;
+      left: -5px;
+  }
+  .blog-slider__button {
+    display: inline-flex;
+    background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+    padding: 15px 35px;
+    border-radius: 50px;
+    color: #fff;
+    box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+    text-decoration: none;
+    font-weight: 500;
+    justify-content: center;
+    text-align: center;
+    letter-spacing: 1px;
+  }
+  .blog-slider .swiper-container-horizontal > .swiper-pagination-bullets, .blog-slider .swiper-pagination-custom, .blog-slider .swiper-pagination-fraction {
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+  }
+  .blog-slider__pagination {
+    position: absolute;
+    z-index: 21;
+    right: 20px;
+    width: 11px !important;
+    text-align: center;
+    left: auto !important;
+    top: 50%;
+    bottom: auto !important;
+    transform: translateY(-50%);
+  }
+  .blog-slider__pagination .swiper-pagination-bullet {
+    width: 11px;
+    height: 11px;
+    display: block;
+    border-radius: 10px;
+    background: #062744;
+    opacity: 0.2;
+    transition: all 0.3s;
+  }
+  .blog-slider__pagination .swiper-pagination-bullet-active {
+    opacity: 1;
+    background: var(--dark);
+    height: 30px;
+    box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
+  }
+  
+  .blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 8px 0;
+  }
+  
 .tarif-card:hover span {
     background: var(--light);
     color: var(--dark);
@@ -380,7 +653,7 @@ main section.atout .container{
     color: var(--white);
     background: #ffffff0f;
 }
-.tarif-card span i{color: var(--light);}
+.tarif-card span i{color: var(--light);font-size: 35px;}
 .default-card:hover a.seemore {
     color: var(--white);
 }
@@ -414,21 +687,24 @@ section.tarifs .container{
     gap: 20px;
     border: none;
     align-items: center;
-    background: transparent !important;
-    border: 1px solid #cca96745;
+    background: #f0b5470d;
+    backdrop-filter: blur(10px);
     text-align: center;
+    width: 30%;
+    box-shadow: 10px 10px 40px #00000059;
 }
 
 .tarif-card:nth-child(2) {
-    background: #513b00;
+    background: linear-gradient(0deg, #111111, #2f2f2f9c, #131313);
     transform: scale(1.1) !important;
     min-width: 22vw;
 }
 
 .tarif-card h4 {
-    color: var(--main-color);
-    font-size: 60px;
+    color: var(--light);
+    font-size: 40px;
     font-family: var(--main-font);
+    font-weight: 700;
 }
 
 .default-card.tarif-card:hover h4 {
@@ -450,11 +726,21 @@ section.tarifs .container{
 
 .tarif-card ul {
     letter-spacing: 1px;
-    padding-left: 40px;
+    padding-left: 0;
     position: relative;
-    list-style: disc;
-    list-style-type: disc;
+    list-style: none;
+    list-style-type: none;
     line-height: 2;
+    border-top: 3px dotted #f0b5472e;
+    width: 90%;
+    border-right: 0;
+    border-left: 0;
+    margin-bottom: 25px;
+    padding: 20px;
+}
+
+.tarif-card ul li {
+    padding: 10px;
 }
 .cases-container{
     display: flex;
@@ -463,7 +749,7 @@ section.tarifs .container{
 }
 section.cases .controls{
     padding: 2% 2%;
-    background: linear-gradient(45deg, #f0b54714, #ffffff00, #eeeeee12);
+    background: #ffffff08;
     color: #eee;
     display: flex;
     gap: 10px;
@@ -700,7 +986,7 @@ section.map{
     align-items: center;
     justify-content: center;
     gap: 3em;
-    padding: 0 10% 8%;
+    padding: 0 10% 5%;
 }
 section.map .zone{
     width: 100%;
@@ -720,6 +1006,11 @@ section.infos .item{
     align-items: flex-start;
     text-align: left;
     gap: 20px;
+    background: #eeeeee0d;
+    backdrop-filter: blur(10px);
+    border-radius: var(--border-radius);
+    padding: 20px 40px;
+    width: 100%;
 }
 section.infos .item div {
     display: flex;
@@ -751,8 +1042,9 @@ section.infos .item span.ico:before {
     z-index: -1;
 }
 section.infos .item h3{
-    font-size: 22px;
-    color: var(--light);
+    font-size: 30px;
+    color: var(--white);
+    font-weight: 500;
 }
 
 section.infos .item a {
@@ -770,7 +1062,7 @@ section.infos .item form input{
     padding: 10px 15px;
     background: transparent;
     border: 0;
-    font-size: 16px;
+    font-size: 12px;
     font-family: var(--main-font);
     font-weight: 400;
     letter-spacing: 1px;
@@ -781,8 +1073,8 @@ section.infos .item form input[type="mail"]{
     color: var(--white);
     width: 70%;
     opacity: .7;
-    font-size: 14px;
-    padding: 13px 10px 11px;
+    font-size: 12px;
+    padding: 10px 16px 10px;
 }
 section.infos .item form input[type="mail"]:hover{opacity: 1;}
 section.infos .item form input[type="mail"]::placeholder{color: var(--white);}
@@ -802,20 +1094,20 @@ h3.new-title {
     letter-spacing: 1px;
 }
 footer{
-    padding: 4% 10% 2%;
+    padding: 2% 10% 1%;
 }
 .footer-1{
     display: flex;
     justify-content: space-between;
     gap: 40px;
-    padding-bottom: 2%;
+    padding-bottom: 3%;
 }
 footer .bloc{
     display: flex;
     flex-direction: column;
     width: 20%;
     align-items: flex-start;
-    gap: 10px;
+    gap: 0px;
 }
 
 footer .bloc ul {
@@ -870,15 +1162,16 @@ footer .bloc span:hover {
     opacity: 1;
 }
 footer .bloc h3{
-    font-size: 20px;
+    font-size: 22px;
     letter-spacing: 1px;
     font-style: normal;
     color: var(--main-color);
+    font-weight: 800;
 }
 .footer-2{
     display: flex;
     justify-content: space-between;
-    padding: 2% 0% 0;
+    padding: 1% 0% 0;
     border-top: 1px solid #ffffff2b;
     letter-spacing: 1.5px;
     font-size: 14px;
@@ -922,4 +1215,55 @@ section.footer-2 i {
     main section.stats .item-count{width: 100%;align-items: center;justify-content: center;border: 1px solid #c28f0445;opacity: 1;padding: 20px;}
     main section.stats{display: grid;grid-template-columns: 1fr 1fr;grid-gap: 20px;padding: 5%;}
     main section.stats .item-count span:nth-child(1){font-size: 4em;}
+    .blog-slider {
+        max-width: 680px;
+        height: 400px;
+      }
 }
+@media screen and (max-width: 768px) {
+    .blog-slider__pagination .swiper-pagination-bullet-active {
+      height: 11px;
+      width: 30px;
+    }
+    .blog-slider__pagination {
+        transform: translateX(-50%);
+        left: 50% !important;
+        top: 205px;
+        width: 100% !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+        margin: 0 5px;
+      }
+      .blog-slider__content {
+        margin-top: -80px;
+        text-align: center;
+        padding: 0 30px;
+      }
+      .blog-slider__img {
+        transform: translateY(-50%);
+        width: 90%;
+      }
+      .blog-slider__item {
+        flex-direction: column;
+      }
+      .blog-slider {
+        min-height: 500px;
+        height: auto;
+        margin: 180px auto;
+      }
+  }
+  
+  @media screen and (max-width: 576px) {
+    .blog-slider__button {
+      width: 100%;
+    }
+    .blog-slider__content {
+        padding: 0;
+      }
+      .blog-slider__img {
+        width: 95%;
+      }
+  }
